# sentinel

./: .env.example  .gitignore  README.md  pyproject.toml
config/: address_labels.json  rules.yaml  watchlist.yaml
src/: __init__.py  config.py  enricher.py  main.py  models.py  rules.py  storage.py  telegram.py  webhook_verify.py
tests/: test_rules.py
